Don't allow the frontend to become too wide (temp fix for it looking better on desktop)

--- a/frontend/src/css/main.scss
+++ b/frontend/src/css/main.scss
@@ -7,10 +7,11 @@
 html,
 body,
 .root {
-  margin: 0;
+  margin: 0 auto;
   padding: 0;
   width: 100vw;
   height: 100vh;
+  max-width: calc(10/16*100vh);
   overflow: hidden;
 }
 
